# conan_explorer

./: .coveragerc  .gitignore  .pylintrc  Bugs.txt  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  app_config.json  cal.spec  conanfile.py  cx_freeze.py  pyproject.toml  pyproject_wip.toml  pytest.ini  right_menu copy.ui  setup.cfg  setup.py  setup_standalone.py
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
build_profiles/: win_142_relwithdebinfo
doc/: Readme.md  demo.json  flat_icon.pdn
doc/deprecated_pkg/: setup.py
doc/example_plugin/: MANIFEST.in  setup.py
doc/example_plugin/cal_example_plugin/: __init__.py  example.ui  example_ui.py  my_cal_plugin.py
script/: prepare_img_links.py
script/last_legacy_release/: pyproject.toml
src/: config.ini
src/app_grid_conan/: config.py  grid_file.py  logger.py  main.py
src/app_grid_conan/settings/: __init__.py  settings.py
src/app_grid_conan/ui/: common.py  main_ui.py
src/app_grid_conan/ui/qt/: app_grid.py  app_grid.ui  clickable_label.py
src/conan_app_launcher/: __init__.py  __main__.py  __version__.py  app_entry.py  app_executor.py  conan.py  config.py  config_file.py  config_schema.json  file_runner.py  layout_file.py  logger.py  main.py
src/conan_app_launcher/app/: __init__.py  component.py  component_ctrl.py  component_reg.py  crash.py  loading.py  logger.py  system.py  typing.py
src/conan_app_launcher/app/base_ui/: loading.py  theming.py
src/conan_app_launcher/assets/: config_schema.json  launch.bat.in  launch.sh.in  new_app_icon.pdn
src/conan_app_launcher/assets/icons/: Readme.md
src/conan_app_launcher/base/: __init__.py  logger.py
src/conan_app_launcher/components/: __init__.py  cache.py  conan.py  conan_cache.py  conan_worker.py  config_file.py  connan_cache.py  file_runner.py  icon.py
src/conan_app_launcher/conan_wrapper/: __init__.py  conanV1.py  conanV2.py  conan_cache.py  conan_cleanup.py  conan_worker.py  types.py  unified_api.py
src/conan_app_launcher/core/: __init__.py  conan.py  conanV1.py  conanV2.py  conan_cache.py  conan_cleanup.py  conan_common.py  conan_worker.py  file_runner.py  system.py
src/conan_app_launcher/data/settings/: __init__.py  ini_file.py
src/conan_app_launcher/data/ui_config/: __init__.py  json_file.py
src/conan_app_launcher/model/: __init__.py  ui_config.py
src/conan_app_launcher/settings/: __init__.py  ini_file.py  settings.py
src/conan_app_launcher/ui/: __init__.py  about.py  about_dialog.py  add_remove_apps.py  app_grid.ui  app_link.py  bug_report.py  common.py  dark_style copy.qss  dark_style.qss  dark_style.qss.in  edit_app.py  fluent_window.py  fluent_window.ui  fluent_window_ui.py  fluent_window_ui.ui  layout_entries.py  light_style.qss  light_style.qss.in  line_edit.py  local_packages.py  local_toolbox.ui  main.ui  main_ui.py  main_window.py  main_window.ui  model.py  plugins.ini  rec.qrc  tab_app_grid.py  theming.py
src/conan_app_launcher/ui/app_grid/: app_button.py  app_edit.ui  app_edit_dialog.py  app_grid.py  app_link.py  tab_app_grid.py
src/conan_app_launcher/ui/common/: __init__.py  bug_dialog.py  conan_line_edit.py  icon.py  loading.py  logger.py  model.py  syntax.py  syntax_highlighting.py  theming.py
src/conan_app_launcher/ui/config/: __init__.py  json_file.py
src/conan_app_launcher/ui/data/: __init__.py  json_file.py
src/conan_app_launcher/ui/dialogs/: __init__.py  about_dialog.py  bug_dialog.py  conan_remove.py
src/conan_app_launcher/ui/fluent_window/: __init__.py  fluent_window.py  fluent_window.ui  fluent_window_ui.py  plugins.py  side_menu.py  side_menu.ui  side_menu_ui.py
src/conan_explorer/: __init__.py  __main__.py
src/conan_explorer/app/: __init__.py  logger.py  system.py  typing.py
src/conan_explorer/assets/: config_schema.json  launch.sh.in
src/conan_explorer/conan_wrapper/: __init__.py  conanV1.py  conanV2.py  conan_cache.py  conan_cleanup.py  conan_worker.py  types.py  unified_api.py
src/conan_explorer/settings/: __init__.py  ini_file.py
src/conan_explorer/ui/: __init__.py  dark_style.qss.in  light_style.qss.in  main_window.py  notifier_service.py  plugins.ini
src/fluent_window/: fluent.qrc  fluent_window.cpp  fluent_window.h  fluent_window.ui  light_style.qss  main.cpp
test/: conftest.py  evaluation.py  requirements.txt  test_conan.py  test_config_file.py  test_layout_file.py  test_z_integration.py
test/01_integration/: test_gui.py
test/01_unit/: conanfile.py  test_app_executor.py  test_cache.py  test_conan.py  test_conan_cache.py  test_config_file.py  test_gui_etc.py  test_gui_etc_dialogs.py  test_gui_grid.py  test_gui_install_dialog.py  test_gui_local_pkg_comps.py  test_icon.py  test_plugins.py  test_settings.py  test_system.py  test_ui_config_model.py
test/02_integration/: mtest_gui_app_grid.py  mtest_gui_conan_conf.py  mtest_gui_conan_search.py  test_gui_app_grid.py  test_gui_conan_conf.py  test_gui_conan_search.py  test_gui_local_pkg_exp.py  test_gui_main.py  test_plugin_manager.py
test/03_system/: test_smoke.py
test/integration/: test_gui.py  test_gui_app_grid.py  test_gui_local_pkg_exp.py  test_gui_main.py  test_integration.py
test/system/: test_smoke.py
test/testdata/: app_config.json  app_config_2.json  app_config_empty_refs.json  app_config_long_channel.json
test/testdata/cache/: cache_read.json  cache_read_corrupt.json  cache_write.json
test/testdata/conan/: conanfile.py  conanfileV2.py  conanfile_any.py  conanfile_no_settings.py  conanv2create.bat  create_many_pkgs.py
test/testdata/config_file/: invalid_syntax.json  multiple_apps_same_package.json  simple-correct.json  update.json  worker.json  wrong_version.json
test/testdata/plugin/: plugins_empty_section.ini  plugins_iconpath_invalid.ini  plugins_importpath_invalid.ini  plugins_minimal_valid.ini  plugins_no_class.ini  plugins_no_icon.ini  plugins_no_importpath.ini  plugins_no_name.ini
test/unit/: test_app_executor.py  test_cache.py  test_conan.py  test_config_file.py  test_gui.py  test_gui_comps.py  test_gui_etc.py  test_gui_grid.py  test_icon.py  test_settings.py  test_ui_config_model.py
(+286 files in other folders)
